tests/baselines/reference/superWithTypeArgument3.errors.txt
tests/cases/compiler/superWithTypeArgument3.ts(8,14): error TS2754: 'super' may not use type arguments.
tests/cases/compiler/superWithTypeArgument3.ts(8,15): error TS2558: Expected 0 type arguments, but got 1.


==== tests/cases/compiler/superWithTypeArgument3.ts (2 errors) ====
    class C<T> {
        foo: T;
        bar<U>(x: U) { }
    }
    
    class D<T> extends C<T> {
        constructor() {
            super<T>();
                 ~~~
!!! error TS2754: 'super' may not use type arguments.
                  ~
!!! error TS2558: Expected 0 type arguments, but got 1.
        }
        bar() {
            super.bar<T>(null);
        }
    }